bsdjail: importing bsdjail base patch
BSD jail mechanism is an implementation of operating system-level
virtualization that allows administrators to partition a computer system
into several independent mini-systems called jails.(from wiki)

This patch implements a subset of the BSD Jail functionality as a Linux LSM.
What is currently implemented:

 - Is locked under a chroot (as are all children) which is not
   vulnerable to the well-known chdir(..)(etc)chroot(.) escape.
 - Cannot do a couple of super operations defined in jail

For more usage, please refer to Documentation/bsdjail.txt for details.

Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>
Integrated-by: Liming Wang <liming.wang@windriver.com>

--- a/security/Kconfig
+++ b/security/Kconfig
@@ -233,5 +233,16 @@ config DEFAULT_SECURITY
 	default "yama" if DEFAULT_SECURITY_YAMA
 	default "" if DEFAULT_SECURITY_DAC
 
+config SECURITY_BSDJAIL
+	tristate "BSD Jail LSM"
+	depends on SECURITY
+	select SECURITY_NETWORK
+	help
+	  Provides BSD Jail compartmentalization functionality.
+	  See Documentation/bsdjail.txt for more information and
+	  usage instructions.
+	  
+	  If you are unsure how to answer this question, answer N.
+
 endmenu
 
