--- a/Documentation/devicetree/bindings/net/snps,dwmac.yaml
+++ b/Documentation/devicetree/bindings/net/snps,dwmac.yaml
@@ -289,6 +289,12 @@ properties:
       is supported. For example, this is used in case of SGMII and
       MAC2MAC connection.
 
+  snps,ext_sys_time:
+    type: boolean
+    description:
+      When set, the MAC uses the external 64-bit reference System
+      Time input.
+
   snps,clk-csr:
     $ref: /schemas/types.yaml#/definitions/uint32
     description:
